@@ -1,6 +1,7 @@
 CHANGELOG XX XXXX 2011 Pierre Frisch
 Rev the source code to 3.4.1
 unregisterService() prevents subsequent registerService() - ID: 3163605
+Sometimes race condition causes to use a canceled timer - ID: 3183116
 
 CHANGELOG 20 January 2011 Pierre Frisch
 Rev the source code to 3.4.0
